games-leaderboard/games-leaderboard-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: games-leaderboard
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: games-leaderboard
  template:
    metadata:
      labels:
        app: games-leaderboard
    spec:
      containers:
      - image: ghcr.io/dysnomia-studio/games-leaderboard:1.6.2
        name: games-leaderboard
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 25m
            memory: 250Mi
          limits:
            cpu: 1000m
            memory: 500Mi
      imagePullSecrets:
      - name: github
