games-leaderboard/games-leaderboard-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: games-leaderboard-svc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: games-leaderboard
